--- a/wine_ecommerce/Dockerfile
+++ b/wine_ecommerce/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.6
 
 ENV PYTHONUNBUFFERED = 1
-ENV APP_DIR=/wine-ecommerce
+ENV APP_DIR=/wine_ecommerce
 
 WORKDIR $APP_DIR
 
@@ -9,4 +9,4 @@ ADD requirements.txt $APP_DIR/
 
 RUN pip install -r requirements.txt
 
-ADD . #APP_DIR/
+ADD . $APP_DIR/
