--- a/wine_ecommerce/Dockerfile
+++ b/wine_ecommerce/Dockerfile
@@ -9,4 +9,8 @@ ADD requirements.txt $APP_DIR/
 
 RUN pip install -r requirements.txt
 
+EXPOSE 8000
+
 ADD . $APP_DIR/
+
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
