--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ before_install:
   - docker --version
   - docker-compose --version
   # - echo "ENV GIT_SHA ${TRAVIS_COMMIT}" >> Dockerfile
+  - docker volume create --name=db_data
   - docker-compose build tests
   - docker-compose build db
-  - docker volume create --name=db_data
+
   # - docker build -t fantaso/django-docker-travis -f wine_ecommerce/Dockerfile
 
 script:
-  - docker-compose run db -d
+  # - docker-compose run db -d
   - docker-compose run tests python manage.py makemigrations
   - docker-compose run tests python manage.py migrate
   - docker-compose run tests python manage.py test shop
