--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_install:
   # - docker build -t fantaso/django-docker-travis -f wine_ecommerce/Dockerfile
 
 script:
-  - docker-compose run -d db
-  - docker-compose run tests python manage.py makemigrations
+  # - docker-compose run -d db
+  # - docker-compose run tests python manage.py makemigrations
   - docker-compose run tests python manage.py migrate
   - docker-compose run tests python manage.py test shop
   # - docker run fantaso/django-docker-travis wine_ecommerce/python manage.py test shop
