--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 script:
   # - docker-compose run -d db
   # - docker-compose run tests python manage.py makemigrations
-  - docker-compose run tests python manage.py migrate
+  # - docker-compose run tests python manage.py migrate
   - docker-compose run tests python manage.py test shop
   # - docker run fantaso/django-docker-travis wine_ecommerce/python manage.py test shop
 
