--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - docker-compose --version
   # - echo "ENV GIT_SHA ${TRAVIS_COMMIT}" >> Dockerfile
   - docker volume create --name=db_data
-  - docker-compose build tests
-  - docker-compose build db
+  # - docker-compose build tests
+  # - docker-compose build db
 
   # - docker build -t fantaso/django-docker-travis -f wine_ecommerce/Dockerfile
 
@@ -33,15 +33,15 @@ after_success:
 - docker-compose stop
 # - docker-compose build --no-cache
 deploy:
+  access_key_id:
+    secure: "$AWS_ACCESS_KEY" # this key must be configure in travisCI environmental variables
+  secret_access_id:
+    secure: "$AWS_SECRET_KEY" # this key must be configure in travisCI environmental variables
   provider: elasticbeanstalk # service to deploy
   region: "eu-central-1" # region of the EBS instance
   app: "django-docker-travis" # name of the app we named the EBS instance
   env: "django-docker-travis-env" # name of environment created by EBS
   bucket_name: "elasticbeanstalk-eu-central-1-472973582080" # bucket S3 created when a elasticbeanstalk environment was created
   bucket_path: "django-docker-travis" # a folder thats created automatically in the S3 bucket once deployed. the same name as the app name.
-  access_key_id:
-    secure: $AWS_ACCESS_KEY # this key must be configure in travisCI environmental variables
-  secret_access_id:
-    secure: $AWS_SECRET_KEY # this key must be configure in travisCI environmental variables
   on:
     branch: master # only if changes occured in master branch is deployed
