--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ after_success:
 deploy:
   access_key_id:
     secure: "$AWS_ACCESS_KEY" # this key must be configure in travisCI environmental variables
-  secret_access_id:
+  secret_access_key:
     secure: "$AWS_SECRET_KEY" # this key must be configure in travisCI environmental variables
   provider: elasticbeanstalk # service to deploy
   region: "eu-central-1" # region of the EBS instance
