--- a/.travis.yml
+++ b/.travis.yml
@@ -30,18 +30,21 @@ script:
 
 after_success:
 # Stop containers and build our image
-- docker-compose stop
+  - docker-compose stop
 # - docker-compose build --no-cache
 deploy:
   access_key_id:
     secure: "$AWS_ACCESS_KEY" # this key must be configure in travisCI environmental variables
   secret_access_key:
     secure: "$AWS_SECRET_KEY" # this key must be configure in travisCI environmental variables
+
   provider: elasticbeanstalk # service to deploy
   region: "eu-central-1" # region of the EBS instance
   app: "django-docker-travis" # name of the app we named the EBS instance
   env: "django-docker-travis-env" # name of environment created by EBS
   bucket_name: "elasticbeanstalk-eu-central-1-472973582080" # bucket S3 created when a elasticbeanstalk environment was created
   bucket_path: "django-docker-travis" # a folder thats created automatically in the S3 bucket once deployed. the same name as the app name.
+
+  skip_cleanup: true
   on:
     branch: master # only if changes occured in master branch is deployed
