--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       - POSTGRES_DB=wine_ecommerce_db
       - POSTGRES_USER=wine-admin
       - POSTGRES_PASSWORD=wine-secret
-      - PGDATA=/var/lib/postgresql/data
+      - PGDATA=/django-data
     volumes:
-      - ./db_data:/var/lib/postgresql/data
+      - ./db_data:/django-data
 
   db_client:
-      image: admirer
+      image: adminer
       restart: always
       ports:
         - 8080:8080
@@ -25,9 +25,9 @@ services:
         dockerfile: Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./wine_ecommerce:/wine_ecommerce
+      - ./wine_ecommerce:/django-app
     ports:
-      - '8000:8000'
+      - 8000:8000
     depends_on:
       - db
 
@@ -37,7 +37,7 @@ services:
         dockerfile: Dockerfile
     command: ["python", "manage.py", "test", "shop"]
     volumes:
-      - ./wine_ecommerce:/wine_ecommerce
+      - ./wine_ecommerce:/django-app
     depends_on:
       - db
 
