--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./wine_ecommerce:/django-app
+      - ./db_data:/django-data
     ports:
       - 8000:8000
     depends_on:
@@ -38,6 +39,7 @@ services:
     command: ["python", "manage.py", "test", "shop"]
     volumes:
       - ./wine_ecommerce:/django-app
+      - ./db_data:/django-data
     depends_on:
       - db
 
