added tag and labels to web and tests services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
     build:
         context: ./wine_ecommerce
         dockerfile: Dockerfile
+        image: fantaso/django-docker-travis:latest
+        labels:
+          shop: "shop webapp"
+          admin: "admin management"
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./wine_ecommerce:/django-app
@@ -36,6 +40,9 @@ services:
     build:
         context: ./wine_ecommerce
         dockerfile: Dockerfile
+        image: fantaso/django-docker-travis:latest
+        labels:
+          test: "test webapp"
     command: ["python", "manage.py", "test", "shop"]
     volumes:
       - ./wine_ecommerce:/django-app
