--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ install:
   - docker-compose --version
   # - echo "ENV GIT_SHA ${TRAVIS_COMMIT}" >> Dockerfile
   - docker volume create --name=db-data
+  - docker-compose up -d
+  - docker-compose ps
+  - docker container ls
   # - docker-compose build tests
   # - docker-compose build db
   # - docker login --username "$DOCKER_USERNAME" --password-stdin "$DOCKER_PASSWORD"
@@ -49,11 +52,8 @@ install:
 script:
   # - docker-compose pull
   - docker-compose ps
-  - docker container ls -a
+  # - docker container ls -a
 
-  - docker-compose up -d
-  - docker-compose ps
-  - docker container ls -a
   # - docker-compose run -d db
   - docker-compose exec web python manage.py makemigrations
   - docker-compose exec web python manage.py migrate
@@ -62,8 +62,11 @@ script:
 
 after_success:
 # Stop containers and build our image
+  - docker-compose ps
   - docker-compose stop
+  - docker-compose ps
   - docker-compose build --no-cache
+  - docker-compose ps
 
 deploy:
   access_key_id:
