--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script:
   # - docker container ls -a
 
   # - docker-compose run -d db
-  - docker-compose exec web python manage.py makemigrations
+  # - docker-compose exec web python manage.py makemigrations
   - docker-compose exec web python manage.py migrate
   - docker-compose exec web python manage.py test shop
   # - docker run fantaso/django-docker-travis wine_ecommerce/python manage.py test shop
